# SIGA-Esp32-Embedded

./: CMakeLists.txt  README.md  main.cpp
include/: BombaRelay.h  Boton.h  Historial.h  PantallaVista.h  SensorClima.h  SensorLDR.h  SensorSuelo.h
src/: BombaRelay.cpp  Boton.cpp  Historial.cpp  PantallaVista.cpp  SensorClima.cpp  SensorLDR.cpp  SensorSuelo.cpp
